tests/compiletests/ui/spirv-attr/local-invocation-index-type.stderr
error: `#[spirv(local_invocation_index)]` must be a `u32`, not `spirv_std::glam::UVec3`
  --> $DIR/local-invocation-index-type.rs:7:53
   |
LL | pub fn main(#[spirv(local_invocation_index)] index: UVec3) {}
   |                                                     ^^^^^

error: aborting due to 1 previous error

